--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -1,6 +1,6 @@
 .Item {
-  display: flex;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: 44px 735px 134px 110px;
   transition: background-color 1s;
 }
 
@@ -22,4 +22,8 @@
   display: flex;
   justify-content: flex-end;
   padding: 20px 20px 20px 10px;
+}
+.Item-price {
+  padding: 20px 10px;
+  text-align: end;
 }
