--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -19,9 +19,8 @@
 }
 
 .modal__content {
-    width: 50vw;
-    padding: 20px;
-    border-radius: 12px;
+    width: 960px;
+    border-radius: 5px;
     background-color: white;
     transform: scale(0.5);
     transition: 0.4s all;
