--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -1,4 +1,4 @@
-.modal {
+.Modal {
     height: 100vh;
     width: 100vw;
     background-color: rgba(0,0,0,0.4);
@@ -13,12 +13,12 @@
     transition: 0.5s;
 }
 
-.modal.active {
+.Modal.active {
     opacity: 1;
     pointer-events: all;
 }
 
-.modal__content {
+.Modal__content {
     width: 960px;
     border-radius: 5px;
     background-color: white;
@@ -26,6 +26,13 @@
     transition: 0.4s all;
 }
 
-.modal__content.active {
+.Modal__content.active {
     transform: scale(1);
+}
+
+.Modal-message_empty {
+    margin:2rem 0 5rem 1rem;
+}
+.Modal-close {
+    margin: 0 0 2rem 1rem;
 }
