--- a/src/components/cart/style.css
+++ b/src/components/cart/style.css
@@ -4,15 +4,12 @@
     box-sizing: border-box;
 }
 
-.Cart {
-    border-radius: 5px;
-}
-
 .Cart-header {
     height: 80px;
     background-color:#e1dede;
     display: flex;
     justify-content: space-between;
+    border-radius: 5px;
         
 }
 
@@ -31,7 +28,8 @@
 }
 .Cart-line {
     display: grid;
-    grid-template-columns:  25px 572px 175px 77px 67px;
+    grid-template-columns:  25px 548px 175px 102px 67px;
+    border-bottom: 1px dashed #ccc;
     border-bottom: 1px dashed #ccc;
     border-top: 1px dashed #ccc;
     padding: 20px 10px 20px 20px;
@@ -50,4 +48,7 @@
     margin: 20px 112px 90px 0;
     display: flex;
     justify-content: end;
+}
+.Cart-sum__number {
+    padding-left: 38px;
 }
