--- a/src/components/basket-tool/style.css
+++ b/src/components/basket-tool/style.css
@@ -14,3 +14,14 @@
   font-weight: bold;
   margin: 0 20px;
 }
+.BasketTool-link {
+  width:74px;
+  height:21px;
+  border: 0.5px solid black;
+  background-color: #f0f0f0;
+  font-size:13px;
+  color: black;
+  padding-top: 3px;
+  text-decoration: none;
+  text-align: center;
+}
