--- a/src/components/modal-layout/style.css
+++ b/src/components/modal-layout/style.css
@@ -53,3 +53,15 @@ body:has(.ModalLayout) {
   min-height: 100px;
   padding: 70px 0;
 }
+.ModalLayout-link {
+  width:74px;
+  height:21px;
+  border: 0.5px solid black;
+  background-color: #f0f0f0;
+  font-size:13px;
+  color: black;
+  padding-top: 3px;
+  text-decoration: none;
+  text-align: center;  
+  margin-top: 28px;
+}
